<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeIdInBottomNavMenu"
        android:icon="@drawable/ic_home"
        android:title="@string/homeTitleInBottomNavigationMenu" />

    <item
        android:id="@+id/walletIdInBottomNavMenu"
        android:icon="@drawable/ic_wallet"
        android:title="@string/walletTitleInBottomNavigationMenu" />

    <item
        android:id="@+id/balanceIdInBottomNavMenu"
        android:icon="@drawable/ic_chart"
        android:title="@string/balanceTitleInBottomNavigationMenu" />

    <item
        android:id="@+id/profileIdInBottomNavMenu"
        android:icon="@drawable/ic_profile"
        android:title="@string/profileTitleInBottomNavigationMenu" />
</menu>